k8s/production/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: trustlink-production
spec:
  redirectScheme:
    scheme: https
    permanent: true
